events: fix members preload
