# internal/transport/http/meet/controllers.go
@@ -13,6 +13,12 @@ import (
 type Controller interface {
 	// CreateMeet - создание мита
 	CreateMeet(w http.ResponseWriter, r *http.Request)
+
+	// FetchUserMeets - получение персонального списка митов для юзера
+	FetchUserMeets(w http.ResponseWriter, r *http.Request)
+
+	// GetMeetDetailsByID - получение инфы мита по айди
+	GetMeetDetailsByID(w http.ResponseWriter, r *http.Request)
 }
 
 type controllerImpl struct {
@@ -36,12 +42,12 @@ func NewController(
 // @Tags         meet
 // @Accept       json
 // @Produce      json
-// @Param        request  body      CreateEventRq   true  "Данные мита"
-// @Success      201      {object}  hu.ResponseID        "ID созданного мита"
-// @Failure      400      {object}  hu.ErrorResponse     "Ошибка валидации"
-// @Failure      401      {object}  hu.ErrorResponse     "Неавторизован"
-// @Failure      500      {object}  hu.ErrorResponse     "Внутренняя ошибка сервера"
-// @Router       /event [post]
+// @Param        request  body      CreateEventRq  true  "Данные мита"
+// @Success      201      {object}  hu.ResponseID
+// @Failure      401      {object}  hu.ErrorResponse
+// @Failure      500      {object}  hu.ErrorResponse
+// @Security     ApiKeyAuth
+// @Router       /meets [post]
 func (c *controllerImpl) CreateMeet(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	l := c.l().With("method", "CreateMeet")
@@ -63,7 +69,7 @@ func (c *controllerImpl) CreateMeet(w http.ResponseWriter, r *http.Request) {
 		EventName:       rq.EventName,
 		Date:            rq.Date,
 		CreatedByUserID: sessionInfo.UserID,
-		Members:         nil,
+		Members:         rq.Members,
 	}
 
 	meetID, err := c.eventUC.CreateMeet(ctx, createMeetRq)
@@ -76,6 +82,88 @@ func (c *controllerImpl) CreateMeet(w http.ResponseWriter, r *http.Request) {
 	hu.RespondJson(w, &hu.ResponseID{
 		ID: meetID,
 	})
+}
+
+// FetchUserMeets godoc
+// @Summary      Получение персонального списка ивентов
+// @Description  ID юзера берется из сессии
+// @Tags         meet
+// @Accept       json
+// @Produce      json
+// @Success      200  {array}   Event
+// @Failure      401  {object}  hu.ErrorResponse
+// @Failure      500  {object}  hu.ErrorResponse
+// @Security     ApiKeyAuth
+// @Router       /meets [get]
+func (c *controllerImpl) FetchUserMeets(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	l := c.l().With("method", "FetchUserMeets")
+
+	sessionInfo, err := middleware.SessionFromContext(ctx)
+	if err != nil {
+		hu.RespondErrWithStatus(w, http.StatusBadRequest, err.Error())
+		l.Error(err.Error())
+		return
+	}
+
+	if sessionInfo == nil {
+		hu.RespondErrWithStatus(w, http.StatusUnauthorized, "Unauthorized")
+		l.Error("User not authorized")
+		return
+	}
+
+	meets, err := c.eventUC.FetchUserMeets(ctx, sessionInfo.UserID)
+	if err != nil {
+		hu.RespondErrWithStatus(w, http.StatusInternalServerError, err.Error())
+		l.Error(fmt.Sprintf("meetController.FetchUserMeets error: %s", err))
+		return
+	}
+
+	out := make([]Event, 0, len(meets))
+
+	for _, meet := range meets {
+		out = append(out, fromDomainEvent(meet))
+	}
+
+	hu.RespondJson(w, out)
+}
+
+// GetMeetDetailsByID godoc
+// @Summary      Получение инфы по ивенту
+// @Tags         meet
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "ID мита"
+// @Success      200  {object}  Event
+// @Failure      401  {object}  hu.ErrorResponse
+// @Failure      404  {object}  hu.ErrorResponse
+// @Failure      500  {object}  hu.ErrorResponse
+// @Security     ApiKeyAuth
+// @Router       /meets/{id} [get]
+func (c *controllerImpl) GetMeetDetailsByID(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	l := c.l().With("method", "GetMeetDetailsByID")
+
+	meetID, err := hu.GetQueryParamInt(r, "id")
+	if err != nil {
+		hu.RespondErrWithStatus(w, http.StatusBadRequest, "invalid query param id")
+		return
+	}
+
+	meet, err := c.eventUC.GetMeetByID(ctx, meetID)
+	if err != nil {
+		hu.RespondErrWithStatus(w, http.StatusInternalServerError, err.Error())
+		l.Error(fmt.Sprintf("meetController.CreateMeetRq error: %s", err))
+		return
+	}
+
+	if meet == nil {
+		hu.RespondErrWithStatus(w, http.StatusNotFound, "meet not found")
+		l.Error(fmt.Sprintf("meetController.GetMeetDetailsByID error: %s", err))
+		return
+	}
+
+	hu.RespondJson(w, fromDomainEvent(*meet))
 }
 
 func (c *controllerImpl) l() *slog.Logger {
